[gd_scene load_steps=8 format=2]

[ext_resource path="res://Levels/Intro/Intro.gd" type="Script" id=1]
[ext_resource path="res://Global/GlobalGlow.tscn" type="PackedScene" id=2]
[ext_resource path="res://Objects/MessageBox/MessageBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Resources/Styles/MessageBoxGreen.stylebox" type="StyleBox" id=4]
[ext_resource path="res://Objects/ARS/ARS.tscn" type="PackedScene" id=5]
[ext_resource path="res://Resources/Sounds/bhar.wav" type="AudioStream" id=6]
[ext_resource path="res://Resources/Sounds/telephone_ringing.wav" type="AudioStream" id=7]

[node name="Intro" type="Node2D"]
script = ExtResource( 1 )

[node name="WorldEnvironment" parent="." instance=ExtResource( 2 )]

[node name="MessageBox" parent="." instance=ExtResource( 3 )]

[node name="MessageBoxBHAR" parent="." instance=ExtResource( 3 )]
margin_top = 850.0
margin_bottom = 1070.0
custom_styles/read_only = ExtResource( 4 )

[node name="ARS" parent="." instance=ExtResource( 5 )]
position = Vector2( 960, 540 )

[node name="BHARVoice" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="TelephoneRinging" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

